# drone_factory

./: .gitignore  README.md  firebase.json  pubspec.yaml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  audio_track.cpp  drone_factory.cpp  low_pass_filter.cpp  oboe_audio_player.cpp  oscillator.cpp  synthesizer.cpp  wavetable_factory.cpp
android/app/src/main/cpp/include/: audio_player.h  audio_source.h  audio_track.h  constants.h  cv_mathieu_duval.h  log.h  low_pass_filter.h  oboe_audio_player.h  oscillator.h  synthesizer.h  wavetable.h  wavetable_factory.h
lib/: firebase_options.dart  main.dart
lib/data/: db_handler.dart
lib/models/: native_synthesizer.dart  patch.dart  track.dart  track_model.dart  user.dart
lib/providers/: auth_provider.dart  base_frequency_provider.dart  patch_provider.dart  track_provider.dart
lib/utils/: constants.dart  knob.dart  name_generator.dart  oscilloscope_painter.dart
lib/views/: home_screen.dart
lib/views/layouts/: main_menu_layout.dart  mixer_controls_layout.dart  save_menu_patch_list_layout.dart  track_controls_layout.dart  volume_oscilloscope_layout.dart
lib/views/screens/: home.dart  login.dart
lib/views/sections/: main_menu_section.dart  main_mixer_track_controls_section.dart  main_volume_oscilloscope_section.dart
lib/views/widgets/: knob.dart  main_volume_widget.dart  mixer_widget.dart  oscilloscope_painter.dart  oscilloscope_widget.dart  track_controls_widget.dart  track_frequency_control_widget.dart  track_tab_widget.dart  (+3 more)
(+16 files in other folders)
